--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GOIT JS HW 11</title>
 
-    <!-- CSS link -->
+    <!-- CSS -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
